--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -7,6 +7,8 @@
 		<bind key="g" modifier="none" command="WeapSelKey"/>
 		<bind key="m" modifier="none" command="MisSelKey"/>
 		<bind key="t" modifier="none" command="TargetKey" />
+		<bind key="n" modifier="none" command="NearestTargetKey" />
+		<bind key="h" modifier="none" command="ThreatTargetKey" />
                 <bind key="`" modifier="none" command="SheltonKey" />
                 <bind key="-" modifier="none" command="DecelKey"/>
                 <bind key="+" modifier="none" command="AccelKey" />
@@ -155,12 +157,12 @@
 			<var name="mipmapdetail" value="3"/>
 			<var name="reflection" value="true"/>
 			<var name="fullscreen" value="false"/>
-			<var name="colordepth" value="32"/>
+			<var name="colordepth" value="16"/>
 			<var name="displaylists" value="false"/>
                 	<var name="fov" value="60.0"/>
                 	<var name="aspect" value="1.3"/>
                 	<var name="znear" value="4.0"/>
-                	<var name="zfar" value="200000"/>
+                	<var name="zfar" value="20000"/>
 			<var name="use_wireframe" value="0"/>
 			<var name="starblend" value="true"/>
 			<var name="background" value="true"/>
