--- a/vegastrike.config
+++ b/vegastrike.config
@@ -145,6 +145,9 @@
         	<section name="graphics/mesh">
 		</section>
         	<section name="graphics">
+	        	<section name="mesh">
+				<var name="testvar" value="-4"/>
+			</section>
 			<var name="LogoOffset" value="-4"/>
 			<var name="LogoOffsetScale" value="-30.8"/>
 			<var name="HaloOffset" value=".5"/>
@@ -152,8 +155,8 @@
 			<var name="OptimizeVertexCondition" value="1"/>
 			<var name="MouseCursor" value="false"/>
 			<var name="ModelDetail" value="10"/>
-			<var name="x_resolution" value="1240"/>
-			<var name="y_resolution" value="1024"/>
+			<var name="x_resolution" value="640"/>
+			<var name="y_resolution" value="480"/>
 			<var name="mipmapdetail" value="3"/>
 			<var name="reflection" value="true"/>
 			<var name="fullscreen" value="false"/>
@@ -200,9 +203,6 @@
 			<var name="deadband"	value="0.05"/>
 		</section>
 		<section name="general">
-			<var name="click_and_select"	value="1"/>
-			<var name="joystick_deadband" 	value="0.1"/>
-			<var name="testvar"		value="unix"/>
         	</section>
 		<section name="player">
 			<var name="realname" 	value="Alexander Rawass"/>
