--- a/vegastrike.config
+++ b/vegastrike.config
@@ -155,8 +155,8 @@
 			<var name="OptimizeVertexCondition" value="1"/>
 			<var name="MouseCursor" value="false"/>
 			<var name="ModelDetail" value="10"/>
-			<var name="x_resolution" value="640"/>
-			<var name="y_resolution" value="480"/>
+			<var name="x_resolution" value="1600"/>
+			<var name="y_resolution" value="1200"/>
 			<var name="mipmapdetail" value="3"/>
 			<var name="reflection" value="true"/>
 			<var name="fullscreen" value="false"/>
@@ -165,7 +165,7 @@
                 	<var name="fov" value="60.0"/>
                 	<var name="aspect" value="1.3"/>
                 	<var name="znear" value="4.0"/>
-                	<var name="zfar" value="20000"/>
+                	<var name="zfar" value="200000"/>
 			<var name="use_wireframe" value="0"/>
 			<var name="starblend" value="true"/>
 			<var name="background" value="true"/>
@@ -197,7 +197,7 @@
 			<var name="shield" value="shieldhit2.wav"/>
 			<var name="armor" value="armorhit.wav"/>
 			<var name="hull" value="armorhit.wav"/>
-			<var name="explode" value="explosion.wav"/>
+			<var name="explode" value="explosion2.wav"/>
 		</section>
 		<section name="joystick">
 			<var name="deadband"	value="0.05"/>
