--- a/vegastrike.config
+++ b/vegastrike.config
@@ -155,8 +155,8 @@
 			<var name="OptimizeVertexCondition" value="1"/>
 			<var name="MouseCursor" value="false"/>
 			<var name="ModelDetail" value="10"/>
-			<var name="x_resolution" value="1600"/>
-			<var name="y_resolution" value="1200"/>
+			<var name="x_resolution" value="1024"/>
+			<var name="y_resolution" value="768"/>
 			<var name="mipmapdetail" value="3"/>
 			<var name="reflection" value="true"/>
 			<var name="fullscreen" value="false"/>
@@ -203,6 +203,7 @@
 			<var name="deadband"	value="0.05"/>
 		</section>
 		<section name="general">
+			<var name="simulation_atom" value="0.076"/>
         	</section>
 		<section name="player">
 			<var name="realname" 	value="Alexander Rawass"/>
