--- a/vegastrike.config
+++ b/vegastrike.config
@@ -2,6 +2,7 @@
         <bindings>
 		<bind key="S" modifier="none" command="Cockpit::SkipMusicTrack" />
  		<bind key="space" modifier="none" command="FireKey" />
+ 		<bind key="y" modifier="none" command="MatchSpeedKey" />
  		<bind key="c" modifier="none" command="CloakKey" />
  		<bind key="return" modifier="none" command="MissileKey" />
 		<bind key="g" modifier="none" command="WeapSelKey"/>
@@ -185,6 +186,9 @@
 		</section>
 		<section name="audio">
 			<var name="Positional" value="true"/>
+			<var name="Doppler" value="true"/>
+			<var name="DopplerScale" value=".1"/>
+
 			<var name="MaxSingleSounds" value="8"/>
 			<var name="MaxTotalSounds" value="24"/>
 			<var name="frequency" value="22050"/>
