--- a/vegastrike.config
+++ b/vegastrike.config
@@ -156,10 +156,10 @@
 			<var name="sharedsounds" value="sounds"/>
 		</section>
 		<section name="terrain">
-			<var name="mass" value="100"/>
-			<var name="xscale" value="1"/>
+			<var name="mass" value=".0000001"/>
+			<var name="xscale" value="10"/>
 			<var name="yscale" value="10"/>
-			<var name="zscale" value="1"/>
+			<var name="zscale" value="10"/>
 		</section>
         	<section name="graphics/general">
 		</section>
@@ -185,8 +185,8 @@
 			<var name="displaylists" value="false"/>
                 	<var name="fov" value="60.0"/>
                 	<var name="aspect" value="1.3"/>
-                	<var name="znear" value="4.0"/>
-                	<var name="zfar" value="200000"/>
+                	<var name="znear" value="7.0"/>
+                	<var name="zfar" value="15000000"/>
 			<var name="use_wireframe" value="0"/>
 			<var name="starblend" value="true"/>
 			<var name="background" value="true"/>
