--- a/vegastrike.config
+++ b/vegastrike.config
@@ -158,9 +158,9 @@
 		<section name="terrain">
 			<var name="mass" value=".0000001"/>
 			<var name="radius" value="0000"/>
-			<var name="xscale" value="5.0"/>
-			<var name="yscale" value="5.0"/>
-			<var name="zscale" value="5.0"/>
+			<var name="xscale" value="2.5"/>
+			<var name="yscale" value="3.5"/>
+			<var name="zscale" value="2.5"/>
 		</section>
         	<section name="graphics/general">
 		</section>
@@ -186,8 +186,8 @@
 			<var name="displaylists" value="false"/>
                 	<var name="fov" value="60.0"/>
                 	<var name="aspect" value="1.3"/>
-                	<var name="znear" value="7.0"/>
-                	<var name="zfar" value="15000000"/>
+                	<var name="znear" value="1.0"/>
+                	<var name="zfar" value="100000"/>
 			<var name="use_wireframe" value="0"/>
 			<var name="starblend" value="true"/>
 			<var name="background" value="true"/>
