--- a/vegastrike.config
+++ b/vegastrike.config
@@ -158,9 +158,9 @@
 		<section name="terrain">
 			<var name="mass" value="100.0000001"/>
 			<var name="radius" value="0000"/>
-			<var name="xscale" value="2.5"/>
-			<var name="yscale" value="3.5"/>
-			<var name="zscale" value="2.5"/>
+			<var name="xscale" value=".1"/>
+			<var name="yscale" value=".3"/>
+			<var name="zscale" value=".1"/>
 		</section>
         	<section name="graphics/general">
 		</section>
