--- a/vegastrike.config
+++ b/vegastrike.config
@@ -55,7 +55,7 @@
                 <bind key="esc" modifier="none" command="Cockpit::Quit"/>
 
 		<bind joystick="0" button="0" modifier="none" command="FireKey" />
-		<bind joystick="0" button="1" modifier="none" command="MisSelKey" />
+		<bind joystick="0" button="1" modifier="none" command="ABKey" />
 		<bind joystick="0" button="2" modifier="none" command="MissileKey" />
 
 		<bind joystick="0" button="3" modifier="none" command="TargetKey" />
@@ -80,7 +80,7 @@
 		</axis>
 
 
-		<bind hatswitch="0" button="0" modifier="none" command="ABKey" />
+<!--		<bind hatswitch="0" button="0" modifier="none" command="ABKey" />-->
 <!--		<bind hatswitch="0" button="1" modifier="none" command="Cockpit::SwitchRVDU" />
 		<bind hatswitch="0" button="2" modifier="none" command="Cockpit::SwitchLVDU" />
 		<bind hatswitch="0" button="3" modifier="none" command="Cockpit::InsideLeft" />
@@ -158,9 +158,9 @@
 		<section name="terrain">
 			<var name="mass" value="100.0000001"/>
 			<var name="radius" value="0000"/>
-			<var name="xscale" value=".1"/>
-			<var name="yscale" value=".3"/>
-			<var name="zscale" value=".1"/>
+			<var name="xscale" value="1"/>
+			<var name="yscale" value="1"/>
+			<var name="zscale" value="1"/>
 		</section>
         	<section name="graphics/general">
 		</section>
@@ -187,7 +187,7 @@
                 	<var name="fov" value="60.0"/>
                 	<var name="aspect" value="1.3"/>
                 	<var name="znear" value="1.0"/>
-                	<var name="zfar" value="100000"/>
+                	<var name="zfar" value="1000000"/>
 			<var name="use_wireframe" value="0"/>
 			<var name="starblend" value="true"/>
 			<var name="background" value="true"/>
