--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -171,6 +171,7 @@
 				<var name="testvar" value="-4"/>
 			</section>
 			<var name="LogoOffset" value="-4"/>
+			<var name="fogdetail" value="2"/>
 			<var name="LogoOffsetScale" value="-30.8"/>
 			<var name="HaloOffset" value=".5"/>
 			<var name="OptimizeVertexArrays" value="true"/>
