--- a/vegastrike.config
+++ b/vegastrike.config
@@ -174,7 +174,7 @@
 			<var name="fogdetail" value="2"/>
 			<var name="LogoOffsetScale" value="-30.8"/>
 			<var name="HaloOffset" value=".5"/>
-			<var name="OptimizeVertexArrays" value="true"/>
+			<var name="OptimizeVertexArrays" value="false"/>
 			<var name="OptimizeVertexCondition" value="1"/>
 			<var name="MouseCursor" value="false"/>
 			<var name="ModelDetail" value="10"/>
