--- a/vegastrike.config
+++ b/vegastrike.config
@@ -227,6 +227,7 @@
 		</section>
 		<section name="joystick">
 			<var name="deadband"	value="0.05"/>
+			<var name="debug_digital_hatswitch"  value="false"/>
 		</section>
 		<section name="general">
 			<var name="simulation_atom" value="0.076"/>
