--- a/vegastrike.config
+++ b/vegastrike.config
@@ -234,6 +234,7 @@
         	</section>
 		<section name="interpreter">
 			<var name="debuglevel" value="0"/>
+			<var name="startgame"  value="true"/>
 		</section>
 		<section name="player">
 			<var name="realname" 	value="insert-name-here"/>
