--- a/vegastrike.config
+++ b/vegastrike.config
@@ -59,8 +59,8 @@
 		<bind joystick="0" button="2" modifier="none" command="MissileKey" />
 
 		<bind joystick="0" button="3" modifier="none" command="TargetKey" />
-		<axis name="x" joystick="0" axis="0"/>
-		<axis name="y" joystick="0" axis="1"/>
+		<axis name="x" joystick="0" axis="0" inverse="false" />
+		<axis name="y" joystick="0" axis="1" inverse="false" />
 
 
 		<!-- use this if you've got a throttle control
