--- a/vegastrike.config
+++ b/vegastrike.config
@@ -200,8 +200,14 @@
 			<var name="lightsaturation" value="0.95"/>
 			<var name="separatespecularcolor" value="true"/>
 			<var name="numlights"	value="4"/>
-			<var name="drawAllTargetBoxes" value="true" />
-			<var name="drawAlwaysITTS" value="true" />
+			<section name="hud" >
+				<var name="drawAllTargetBoxes" value="true" />
+				<var name="drawAlwaysITTS" value="true" />
+				<var name="radarType" value="Elite" />
+				<var name="drawLineToTarget" value="true" />
+				<var name="drawLineToTargetsTarget" value="true" />
+				<var name="drawLineToITTS" value="true" />
+			</section>
 		</section>
 		<section name="audio">
 			<var name="Positional" value="true"/>
