--- a/vegastrike.config
+++ b/vegastrike.config
@@ -3,6 +3,7 @@
 		<bind key="S" modifier="none" command="Cockpit::SkipMusicTrack" />
  		<bind key="space" modifier="none" command="FireKey" />
  		<bind key="y" modifier="none" command="MatchSpeedKey" />
+ 		<bind key="j" modifier="none" command="JumpKey" />
  		<bind key="c" modifier="none" command="CloakKey" />
  		<bind key="return" modifier="none" command="MissileKey" />
 		<bind key="g" modifier="none" command="WeapSelKey"/>
