--- a/vegastrike.config
+++ b/vegastrike.config
@@ -208,9 +208,9 @@
 				<var name="drawAllTargetBoxes" value="true" />
 				<var name="drawAlwaysITTS" value="true" />
 				<var name="radarType" value="WC" />
-				<var name="drawLineToTarget" value="true" />
-				<var name="drawLineToTargetsTarget" value="true" />
-				<var name="drawLineToITTS" value="true" />
+				<var name="drawLineToTarget" value="false" />
+				<var name="drawLineToTargetsTarget" value="false" />
+				<var name="drawLineToITTS" value="false" />
 			</section>
 		</section>
 		<section name="audio">
