--- a/vegastrike.config
+++ b/vegastrike.config
@@ -246,6 +246,7 @@
 		</section>
 		<section name="general">
 			<var name="simulation_atom" value="0.076"/>
+			<var name="default_mission" value="test2.mission"/>
         	</section>
 		<section name="interpreter">
 			<var name="debuglevel" value="2"/>
