--- a/vegastrike.config
+++ b/vegastrike.config
@@ -151,7 +151,7 @@
 		<color name="planet_mat_specular" r="0" g="0" b="0" a="1.0"/>
 		<color name="planet_mat_emmissive" r="0" g="0" b="0" a="1.0"/>
 		<!-- set this to dark-blue to get the real spacey feeling -->
-		<color name="space_background" ref="dark-red" section="absolute"/>
+		<color name="space_background" ref="dark-blue" section="absolute"/>
 	    </section>
         </colors>
 	<variables>
