--- a/vegastrike.config
+++ b/vegastrike.config
@@ -43,6 +43,9 @@
 
                 <bind key="function-5" modifier="none" command="Cockpit::Behind"/>
                 <bind key="function-6" modifier="none" command="Cockpit::Pan"/>
+                <bind key="function-7" modifier="none" command="Cockpit::ViewTarget"/>
+                <bind key="function-8" modifier="none" command="Cockpit::OutsideTarget"/>
+                <bind key="function-9" modifier="none" command="Cockpit::PanTarget"/>
                 <bind key="function-11" modifier="none" command="Cockpit::ZoomIn"/>
                 <bind key="function-12" modifier="none" command="Cockpit::ZoomOut"/>
 
