--- a/vegastrike.config
+++ b/vegastrike.config
@@ -251,6 +251,12 @@
 			<var name="simulation_atom" value="0.076"/>
 			<var name="default_mission" value="test2.mission"/>
         	</section>
+		<section name="physics">
+			<!-- the next variable tells what percentage
+			      of normal the shields recharge in a nebule.  
+			      Zero means shields do not work in nebulae -->
+			<var name="nebula_shield_recharge" value=".5">
+		</section>
 		<section name="interpreter">
 			<var name="debuglevel" value="2"/>
 			<var name="startgame"  value="true"/>
