--- a/vegastrike.config
+++ b/vegastrike.config
@@ -194,7 +194,7 @@
 			<var name="reflection" value="true"/>
 			<var name="fullscreen" value="false"/>
 			<var name="colordepth" value="16"/>
-			<var name="displaylists" value="false"/>
+			<var name="displaylists" value="true"/>
                 	<var name="fov" value="60.0"/>
                 	<var name="aspect" value="1.3"/>
                 	<var name="znear" value="1.0"/>
