--- a/vegastrike.config
+++ b/vegastrike.config
@@ -174,9 +174,6 @@
         	<section name="graphics/mesh">
 		</section>
         	<section name="graphics">
-	        	<section name="mesh">
-				<var name="testvar" value="-4"/>
-			</section>
 			<var name="jumpgatesize" value="17.5"/>
 			<var name="jumpgate" value="warp.ani"/>
 
@@ -185,7 +182,9 @@
 			<var name="LogoOffsetScale" value="-30.8"/>
 			<var name="HaloOffset" value=".5"/>
 			<var name="OptimizeVertexArrays" value="false"/>
-			<var name="OptimizeVertexCondition" value="1"/>
+			<var name="OptimizeVertexCondition" value="1.0"/>
+			<var name="LockVertexArrays" value="true"/>
+			<var name="SharedVertexArrays" value="false"/>
 			<var name="MouseCursor" value="false"/>
 			<var name="ModelDetail" value="1"/>
 			<var name="x_resolution" value="800"/>
