--- a/vegastrike.config
+++ b/vegastrike.config
@@ -190,6 +190,7 @@
 			<var name="x_resolution" value="800"/>
 			<var name="y_resolution" value="600"/>
 			<var name="mipmapdetail" value="3"/>
+			<var name="ForceLighting" value="1"/>
 			<var name="reflection" value="true"/>
 			<var name="fullscreen" value="false"/>
 			<var name="colordepth" value="32"/>
