--- a/vegastrike.config
+++ b/vegastrike.config
@@ -256,6 +256,8 @@
 			      of normal the shields recharge in a nebule.  
 			      Zero means shields do not work in nebulae -->
 			<var name="nebula_shield_recharge" value=".5">
+			<!-- the next variable tells how accurately systems shoudl be simulated where the player isn't in.   Really you don't need much accuracy -->
+			<var name="InactiveSystemTime" value=".2">
 		</section>
 		<section name="interpreter">
 			<var name="debuglevel" value="2"/>
