--- a/vegastrike.config
+++ b/vegastrike.config
@@ -251,13 +251,26 @@
 			<var name="simulation_atom" value="0.076"/>
 			<var name="default_mission" value="test2.mission"/>
         	</section>
+		<section name="AI">
+			<section name="Targetting">
+				<var name="TargetSwitchReactionTime" value=".8"/>
+				<var name="TargetSwitchProbability" value=".01"/>
+			</section>
+			<section name="Firing">
+				<var name="MissileProbability" value=".01"/>
+			</section>
+		</section>
 		<section name="physics">
 			<!-- the next variable tells what percentage
 			      of normal the shields recharge in a nebule.  
 			      Zero means shields do not work in nebulae -->
-			<var name="nebula_shield_recharge" value=".5">
+			<var name="nebula_shield_recharge" value=".5"/>
 			<!-- the next variable tells how accurately systems shoudl be simulated where the player isn't in.   Really you don't need much accuracy -->
-			<var name="InactiveSystemTime" value=".2">
+			<var name="InactiveSystemTime" value=".2"/>
+			<var name="AfterburnerFuelUsage" value="4"/>
+			<var name="NoFuelThrust" value=".9"/>
+			<var name="NoFuelThrustAfterburn" value=".1"/>
+
 		</section>
 		<section name="interpreter">
 			<var name="debuglevel" value="2"/>
