--- a/vegastrike.config
+++ b/vegastrike.config
@@ -267,9 +267,9 @@
 			<var name="nebula_shield_recharge" value=".5"/>
 			<!-- the next variable tells how accurately systems shoudl be simulated where the player isn't in.   Really you don't need much accuracy -->
 			<var name="InactiveSystemTime" value=".2"/>
-			<var name="AfterburnerFuelUsage" value="4"/>
+			<var name="AfterburnerFuelUsage" value="10"/>
 			<var name="NoFuelThrust" value=".9"/>
-			<var name="NoFuelThrustAfterburn" value=".1"/>
+			<var name="NoFuelAfterburn" value=".1"/>
 
 		</section>
 		<section name="interpreter">
