--- a/vegastrike.config
+++ b/vegastrike.config
@@ -243,6 +243,10 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
 			<section name="mesh">
 				<var name="testvar" value="-4"/>
 			</section>
+			<var name="high_quality_font" value="true"/>
+			<var name="font_antialias" value="true"/>
+			<var name="font_point" value="16"/>
+	
 			<var name="jumpgatesize" value="17.5"/>
 			<var name="jumpgate" value="warp.ani"/>
 			<var name="LogoOffset" value="-4"/>
