--- a/vegastrike.config
+++ b/vegastrike.config
@@ -243,7 +243,7 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
 			<section name="mesh">
 				<var name="testvar" value="-4"/>
 			</section>
-			<var name="high_quality_font" value="true"/>
+			<var name="high_quality_font" value="false"/>
 			<var name="font_antialias" value="true"/>
 			<var name="font_point" value="16"/>
 	
