--- a/vegastrike.config
+++ b/vegastrike.config
@@ -247,6 +247,7 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
 			<var name="font_antialias" value="true"/>
 			<var name="font_point" value="16"/>
 	
+			<var name="high_quality_sprites" value="true"/>
 			<var name="jumpgatesize" value="17.5"/>
 			<var name="jumpgate" value="warp.ani"/>
 			<var name="LogoOffset" value="-4"/>
@@ -270,7 +271,7 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
 #end -->
 <!-- #stable -->
 			<var name="OptimizeVertexArrays" value="false"/>
-			<var name="displaylists" value="false"/>
+			<var name="displaylists" value="true"/>
 			<var name="LockVertexArrays" value="false"/>
 			<var name="fullscreen" value="false"/>
 <!-- #end -->
